--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <div class="my-other-class">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi recusandae quo excepturi, ullam rem odit illo esse aspernatur dolores numquam. Sit eos perspiciatis sint necessitatibus totam qui provident optio eaque?</div>
     <div class="my-class">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus iste quaerat, et
         dignissimos illo officia, tenetur cupiditate veniam harum similique culpa eum vero? Accusamus tenetur impedit
         at, dolorum nam magnam.</div>
@@ -57,20 +58,27 @@
     </div>
     <br>
 
-    <div class="specific very-sepcific">
+    <div class="specific very-specific">
         .specific.very-specific
     </div>
     <br>
 
-    <div id="specific" class="specific very-specific">#specific.specific.very-specific</div>
+    <div id="specific" class="specific very-specific">
+        #specific.specific.very-specific
+    </div>
     <br>
+
     <button id="specific" class="specific">
         #specific.specific
     </button>
     <br>
+
     <button class="specific">
         .specific
     </button>
+    <br>
+
+    <a href="layout.html">Links are relative to the HTML-file, but depends on how the server processes requests</a>
 
 </body>
 
